--- a/Phasmo/ghost.html
+++ b/Phasmo/ghost.html
@@ -26,33 +26,33 @@
         <div id="evidences">
             <div id="exclude">
                 <h3>Evidences the Ghost has NOT</h3>
-                <input type="checkbox" class="fingerprints">
-                <label class="evidence" for="fingerprints"><span></span>Fingerprints</label> 
-                <input type="checkbox" class="emf5">
-                <label class="evidence" for="emf5">EMF 5</label>
-                <input type="checkbox" class="orbs">
-                <label class="evidence" for="orbs">Orbs</label>
-                <input type="checkbox" class="spiritbox">
-                <label class="evidence" for="spritbox">Spiritbox</label>
-                <input type="checkbox" class="writing">
-                <label class="evidence" for="writing">Ghost writing</label>
-                <input type="checkbox" class="freezing">
-                <label class="evidence" for="freezing">Freezing Temperatures</label>
+                <input type="checkbox" class="fingerprints" id="fingerprintsE">
+                <label class="evidence" for="fingerprintsE"><span></span>Fingerprints</label> 
+                <input type="checkbox" class="emf5" id="emf5E">
+                <label class="evidence" for="emf5E">EMF 5</label>
+                <input type="checkbox" class="orbs" id="orbsE">
+                <label class="evidence" for="orbsE">Orbs</label>
+                <input type="checkbox" class="spiritbox" id="spiritboxE">
+                <label class="evidence" for="spritboxE">Spiritbox</label>
+                <input type="checkbox" class="writing" id="writingE">
+                <label class="evidence" for="writingE">Ghost writing</label>
+                <input type="checkbox" class="freezing" id="freezingE">
+                <label class="evidence" for="freezingE">Freezing Temperatures</label>
             </div>
             <div id="include">
                 <h3>Evidences the Ghost has</h3>
-                <input type="checkbox" class="fingerprints">
-                <label class="evidence" for="fingerprints">Fingerprints</label>
-                <input type="checkbox" class="emf5">
-                <label class="evidence" for="emf5">EMF 5</label>
-                <input type="checkbox" class="orbs">
-                <label class="evidence" for="orbs">Orbs</label>
-                <input type="checkbox" class="spiritbox">
-                <label class="evidence" for="spritbox">Spiritbox</label>
-                <input type="checkbox" class="writing">
-                <label class="evidence" for="writing">Ghost writing</label>
-                <input type="checkbox" class="freezing">
-                <label class="evidence" for="freezing">Freezing Temperatures</label>
+                <input type="checkbox" class="fingerprints" id="fingerprintsI">
+                <label class="evidence" for="fingerprintsI">Fingerprints</label>
+                <input type="checkbox" class="emf5" id="emf5I">
+                <label class="evidence" for="emf5I">EMF 5</label>
+                <input type="checkbox" class="orbs" id="orbsI">
+                <label class="evidence" for="orbsI">Orbs</label>
+                <input type="checkbox" class="spiritbox" id="spiritboxI">
+                <label class="evidence" for="spritboxI">Spiritbox</label>
+                <input type="checkbox" class="writing" id="writingI">
+                <label class="evidence" for="writingI">Ghost writing</label>
+                <input type="checkbox" class="freezing" id="freezingI">
+                <label class="evidence" for="freezingI">Freezing Temperatures</label>
             </div>
         </div>
     </div>
